Updata on html and css

--- a/main.css
+++ b/main.css
@@ -6,5 +6,9 @@
 body{
     background-color: '#222';
     color: white;
-    font-family: ;
+    font-family: system-ui;
+}
+.crud{
+    width: 80%;
+    margin: auto;
 }
