--- a/main.css
+++ b/main.css
@@ -4,11 +4,46 @@
 }
 
 body{
-    background-color: '#222';
+    background:#222;
     color: white;
     font-family: system-ui;
 }
 .crud{
     width: 80%;
     margin: auto;
+}
+
+.head{
+    text-align: center;
+    text-transform: uppercase;
+    margin: 10px  0;
+}
+input{
+    width: 100%;
+    height: 30px;
+    border: none;
+    outline: none;
+    background: #111;
+    margin: 4px 0 ;
+    border-radius: 4px;
+    padding: 4px;
+    color: #fff;
+
+
+}
+input:focus{
+    background:#000;
+    transform: scale(1.1);
+}
+.price input{
+    width: 20%;
+
+}
+#total{
+    background:#a00d02;
+    padding: 5px 2px;
+    border-radius:4px ;
+}
+#total::before{
+    content: 'total: ';
 }
