update to the project

--- a/main.css
+++ b/main.css
@@ -62,3 +62,23 @@ button:hover{
     background-color:rgb(212, 185, 32) ;
     letter-spacing: 1px;
 }
+.btnSearch{
+    display: flex;
+    justify-content: space-between;
+
+}
+.btnSearch button{
+    width: 45%;
+
+}
+table{
+    width: 100%;
+    text-align: center;
+    margin: 10px 0;
+}
+table th{
+    text-transform: uppercase;
+}
+th,td{
+    padding: 5px;
+}
